# shape-it

./: CMakeLists.txt  README.md  package.xml  visual_per.rviz
action/: CloudEncoder.action
include/: exhaustive_fit_detector.h  icp_registration_fitter.h  iterative_distance_fitter.h  marker_generator.h  model_fitter.h
launch/: new.launch  rosbag_node.launch  tabletop_segmentation.launch  tabletop_segmentation_1.launch  tabletop_segmentation_d.launch  visual_perception.launch
msg/: Cone.msg  Cylinder.msg  EncodedCloud.msg  EncodingStats.msg  Parallelepiped.msg  Plane.msg  Request.msg  Sphere.msg  Table.msg  TabletopDetectionResult.msg
src/: cone_fitting.cpp  cylinder_fitting.cpp  encoder.cpp  filter.cpp  iterative_distance_fitter.cpp  marker_generator.cpp  model_fitter.cpp  object_managing.cpp  parallelepiped_fitting.cpp  path_planning.cpp  ping_cylinder_fitting.cpp  ping_ob_mg.cpp  ping_segment_object_in_hand.cpp  ping_tabletop_node.cpp  segment_object_in_hand.cpp  shapelizer.cpp  sphere_fitting.cpp  table_segmention.cpp  tabletop_segmentation.cpp
srv/: ConeFitting.srv  CylinderFitting.srv  ObjectManager  ObjectManaging.srv  ParallelepipedFitting.srv  PathPlanning.srv  SphereFitting.srv  TableSegmentation.srv  TabletopSegmentation.srv
test/: 02018R3M.off  02018R3M.stl  02018R3M.xyz  02018R3M_segmented.off  cylinder.stl  cylinder.xyz
