<?xml version="1.0"?>
<package>
  <name>shape_it</name>
  <version>0.0.0</version>
  <description>The shape_it package</description>

  <maintainer email="carlos@beta-robots.com">Carlos J. Rosales Gallegos</maintainer>

  <license>LGPLv3</license>

  <url type="website">http://www.beta-robots.com</url>

  <author email="carlos@beta-robots.com">Carlos J. Rosales Gallegos</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>

  <export>
  </export>
</package>